# trodes_to_nwb

./: .gitignore  CHANGELOG.md  CLAUDE.md  HEADSTAGE_SENSORS.md  LICENSE  PLAN.md  README.md  REVIEW.md  REVIEW_PLAN.md  create_nwb_example.py  environment.yml  installing_spikegadgets.md  memory_optimization_plan.md  memory_profiling_baseline.md  pyproject.toml  sample_metadata_with_sensor_units.yml  setup.py  test_sensor_separation.py
.github/: copilot-instructions.md
.github/workflows/: lint.yml  test_package_build.yml
docs/: developer.md  rec_nwb_validation_plan.md  yaml_mapping.md
json_schema_files/: nwb_schema.json
notebooks/: README.md  conversion_tutorial.ipynb  explore_rec_file_neo.ipynb  scaled_nwb_conversion_ex.ipynb  test_statescript_parsing.ipynb  truncate_rec.ipynb
notebooks/old/: Untitled1.ipynb  Untitled2.ipynb  Untitled4.ipynb  Untitled5.ipynb  datajoint_schema_from_nwb_scratch.ipynb  example_file_path.nwb  ff_to_nwb_examples.ipynb  frank_lab_queries_allen_data.ipynb  franklab_dj_schema.py  nwb-datajoint-test.ipynb  nwb_read_test.ipynb  nwbfile_to_datajoint_schema.ipynb  populate_DJ_from_NWB.ipynb
scripts/: convert_kf2.py  convert_kibbles.py
src/spikegadgets_to_nwb/: convert.py  convert_analog.py  convert_dios.py  convert_ephys.py  convert_intervals.py  convert_position.py  convert_rec_header.py  convert_yaml.py  data_scanner.py  metadata_validation.py  nwb_schema.json  spike_gadgets_raw_io.py
src/spikegadgets_to_nwb/franklabnwb_git_subtree/: README.md
src/spikegadgets_to_nwb/franklabnwb_git_subtree/notebooks/: franklab_nwb_generation.ipynb
src/spikegadgets_to_nwb/franklabnwb_git_subtree/notebooks/old/: Untitled.ipynb  Untitled6.ipynb  Untitled7.ipynb  create_franklab_nwbfile_linpos.ipynb  datajoint_example.ipynb  datajoint_schema_from_nwb.ipynb  franklab_schema_test.ipynb  place_field_with_queries.ipynb  populate_test.ipynb
src/spikegadgets_to_nwb/franklabnwb_git_subtree/scripts/: run_py_background.sh
src/spikegadgets_to_nwb/franklabnwb_git_subtree/scripts/filterframework_to_nwb/: README.md
src/spikegadgets_to_nwb/franklabnwb_git_subtree/xml/: kib_reconfig.xml
src/spikegadgets_to_nwb/franklabnwb_git_subtree/yaml/: 20210407_wilbur.yml  despereaux20191125.yml  jaq20190826.yml  kf2_20170201_metadata.yml  kib_20170203_metadata.yml
src/spikegadgets_to_nwb/tests/: test_convert.py  test_convert_analog.py  test_convert_dios.py  test_convert_ephys.py  test_convert_intervals.py  test_convert_position.py  test_convert_rec_header.py  test_convert_yaml.py  test_metadata_validation.py  test_spikegadgets_io.py  utils.py
src/spikegadgets_to_nwb/tests/integration-tests/: test_metadata_validation_it.py
src/spikegadgets_to_nwb/tests/integration_tests/: test_metadata_validation.py
src/spikegadgets_to_nwb/tests/test_data/: 20230622_sample_metadata.yml  20230622_sample_metadataProbeReconfig.yml  bad_header.trodesconf  nonptp_metadata.yml  reconfig_probeDevice.trodesconf  test_metadata.yml  test_metadata_dict_samples.py  test_metadata_probe_reconfig.yml
src/spikegadgets_to_nwb/tests/unit_tests/: conftest.py  test_convert_ephys.py  test_convert_rec_header.py  test_convert_yaml.py  test_metadata_validation.py
src/trodes_to_nwb/: __init__.py  convert.py  convert_analog.py  convert_dios.py  convert_ephys.py  convert_intervals.py  convert_optogenetics.py  convert_position.py  convert_rec_header.py  convert_statescript.py  convert_yaml.py  data_scanner.py  database_validation.py  lazy_timestamp_array.py  metadata_validation.py  nwb_schema.json  spike_gadgets_raw_io.py  validate_conversion.py
src/trodes_to_nwb/device_metadata/optical_fiber_metadata/: demo_fiber_device_1.yml  optogenix_lambda_fiber.yml
src/trodes_to_nwb/device_metadata/optical_source_metadata/: demo_source_1.yml  luxX_638_200.yml
src/trodes_to_nwb/device_metadata/probe_metadata/: 128c-4s4mm6cm-15um-26um-sl.yml  128c-4s4mm6cm-20um-40um-sl.yml  128c-4s6mm6cm-15um-26um-sl.yml  128c-4s6mm6cm-20um-40um-sl.yml  128c-4s8mm6cm-15um-26um-sl.yml  128c-4s8mm6cm-20um-40um-sl.yml  64c-3s6mm6cm-20um-40um-sl.yml  64c-4s6mm6cm-20um-40um-dl.yml  A1x32-6mm-50-177-H32_21mm.yml  NET-EBL-128ch-single-shank.yml  tetrode_12.5.yml
src/trodes_to_nwb/device_metadata/virus_metadata/: AAV-1-Ef1a-DIO-ChRmine-mScarlet.yml  AAV-8-Ef1a-DIO-ChRmine-mScarlet.yml  demo_virus_1.yml
src/trodes_to_nwb/probe_metadata/: 32c-2s8mm6cm-20um-40um-dl.yml
src/trodes_to_nwb/tests/: test_behavior_only_rec.py  test_convert.py  test_convert_analog.py  test_convert_dios.py  test_convert_ephys.py  test_convert_intervals.py  test_convert_optogenetics.py  test_convert_position.py  test_convert_rec_header.py  test_convert_statescript.py  test_convert_yaml.py  test_lazy_timestamp_memory.py  test_memory_profiling.py  test_metadata_validation.py  test_real_memory_usage.py  test_spikegadgets_io.py  test_validate_conversion.py  utils.py
src/trodes_to_nwb/tests/integration-tests/: test_metadata_validation_it.py
src/trodes_to_nwb/tests/test_data/: 20230622_sample_metadata.yml  20230622_sample_metadataProbeReconfig.yml  fsgui_geometry.trackgeometry  fsgui_ripple_trigger.yaml  fsgui_theta_trigger.yaml  nonptp_metadata.yml  reconfig_probeDevice.trodesconf  test_metadata_dict_samples.py
tests/: test_convert_yaml.py
workflows/: test_package_build.yml
xml/: kf2_reconfig.xml
yaml/: 128c-4s6mm6cm-15um-26um-sl.yml  J1620210606_metadata.yml  beans20190718_metadata.yml  kf2_20170120_metadata.yml  kf2_20170201_metadata.yml  kibbles20170216_metadata.yml
yaml/old/: chimi_metadata.yml  despereaux20191122.yml  despereaux20191125.yml  despereaux20191126.yml
