[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trodes_to_nwb"
description = "A python package to convert SpikeGadgets data to NWB"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Sam Bray", email = "sam.bray@ucsf.edu" },
    { name = "Eric Denovellis", email = "eric.denovellis@ucsf.edu" },
    { name = "Ryan Ly", email = "rly@lbl.gov" },
    { name = "Philip Adenekan", email = "phil.adenekan@ucsf.edu" },
    { name = "Loren Frank", email = "loren.frank@ucsf.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pynwb",
    "nwbinspector",
    "ndx_franklab_novela",
    "pyyaml",
    "neo",
    "dask[complete]",
    "ffmpeg",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/LorenFrankLab/trodes_to_nwb"
"Bug Tracker" = "https://github.com/LorenFrankLab/trodes_to_nwb/issues"

[project.optional-dependencies]
test = ["black", "pytest", "pytest-cov", "pytest-mock"]

[tool.hatch.version]
source = "vcs"
fallback_version = "0.1.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/trodes_to_nwb/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/trodes_to_nwb"]
exclude = ["src/trodes_to_nwb/data/test_data"]
